<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.elinmejorabletv.ui.mobile.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.elinmejorabletv.ui.mobile.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.elinmejorabletv.ui.mobile.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.elinmejorabletv.ui.mobile.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>